#    git diff <cluster commit id> Changelog
# It is also a good idea to take a look on:
#    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
#    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.

* gritukan: Node resource limits config format changed. Everything is _hopefully_ backwards-compatible, but better update config before nodes update.
* gritukan: |Get| semantics changed. Update masters via snapshot.
* ifsmirnov: Added validation of creating non-external nodes. Update masters via snapshot.
* lexolordan: To use unmount user is required to have permission "use" on cell_bundle. Update masters via snapshot.
* gritukan: Nodes dynamic config added. Make sure that //sys/cluster_nodes/@config contains actual dynamic config.
* lexolordan: Calculating static memory while tablets are mounting without mounted tablets. Update masters via snapshot.
* gritukan: Serialization of network projects fixed. Update masters via snapshot.
* savrus: Changed semantics of mount locking on secondary master. Update masters via snapshot.
* lexolordan: To use force unmount user is required to have permission "administer" on cell_bundle. Update masters via snapshot.
* shakurov: ACL validation semantics have changed for portal nodes. Update masters via snapshot.
* ifsmirnov: Sync reshard semantics changed. Update masters via snapshot.
* renadeen: Added filtering of jobs by has_competitors. Update operation archive to version 33.
* shakurov: Commit d674773a35 has changed (and fixed) serialization format of TSchedulerPool{Tree}::SpecifiedAttributes_. Update masters via snapshot.
* shakurov: Commit c5503dc801 has changed semantics of setting/removing attributes. Update masters via snapshot.
* savrus: Added some compatibility code for 19.4 clusters. Please use this version or later for updating a 19.4 cluster.